added fog and changed color

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<script src="js/three.js"></script>
 	</head>
 	<body>
-		<script src ="ortho.js">		
+		<script src ="scene.js">		
 		</script>
 	</body>
 </html>
